--- a/porio.html
+++ b/porio.html
@@ -9,13 +9,13 @@
     <style>
         body{
             font-family: Arial, Helvetica, sans-serif;
-            background-color: #f4f4f4;
-            margin-left: 10px;
+            background-color: #e0ffe7;
+            margin-left: 0px;
             padding: 0;
         }
 
         .container{
-            max-width: 800px;
+            max-width: 850px;
             margin:30px auto;
             background: #ffffff;
             border-radius: 50px;
@@ -24,15 +24,18 @@
         h1{
             text-align: center;
             color:#333;
+            padding: 10px;
         }
         h2{
             color: #444;
             border-left: 5px solid #54a854;
+            padding-left: 7px;
       
 
         }
-        h4 , h5{
+        h4 , h5 {
             color:black;
+            padding-left: 7px;
         }
 
         img {
@@ -45,6 +48,8 @@
             line-height:1.6;
             color:#121111;
             text-align: justify;
+            padding-left:15px;
+            padding-right: 15px;
         }
 
         ul, ol {
